GL/src/test/deca/codegen/valid/deca_sans_objet/decl_et_affectation/Op_priority.ass
; start main program
	TSTO #3
	BOV stack_overflow_error
	ADDSP #3
; Construction de la VTable de de Object
	LOAD #null, R0	;     // On garde Dans R0 l'addr de la classe Object pour eviter de le loader a chaque fois !! 
	STORE R0, 1(GB)
	LOAD code.Object.equals, R1	;     // On garde Dans R1 le label 'code.Object.equals' pour la meme raison 
	STORE R1, 2(GB)
; Variable Declarations : 
; Beginning of main instructions:
	LOAD #1, R2
	LOAD #2, R3
	MUL #3, R3
	ADD R3, R2
	STORE R2, 3(GB)
	LOAD 3(GB), R2
	LOAD R2, R1
	WINT
	HALT
; end main program
code.Object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	SEQ R1
	RTS
stack_overflow_error:
	WSTR "Error: Stack Overflow"
	WNL
	ERROR
